--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -13,3 +13,23 @@ a{
   text-decoration:none ;
   color: inherit;
 }
+
+.animate-fadein {
+  animation: fadein 1s ease-in-out;
+}
+
+
+@keyframes fadein {
+  0%{
+    opacity: 0;
+  }
+  100%
+  {
+    opacity: 1;
+  }
+  
+}
+
+.scrollbar::-webkit-scrollbar{
+  display: none;
+}
